--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,31 @@
   --group-background-focus: #678efe;
 }
 
+// Navigation
+
+.nav-list {
+  display: flex;
+  justify-content: flex-start;
+
+  &__item {
+    display: flex;
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 20px;
+  }
+
+  &__link {
+    font-weight: 500;
+    text-decoration: none;
+  }
+
+  &__link--active {
+    font-weight: 700;
+    border-bottom: 1px solid #3f51b5;
+  }
+}
+
 * {
   box-sizing: inherit;
 }
